# PyAnalysis

./: .gitignore  LICENSE  README.md  analyzer.py  pyproject.toml
pyanalyzer/: __main__.py  models.py  report.py
pyanalyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
